datasource db {
  provider = "mongodb"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
  output   = "./generated"
}

model User {
  id             String   @id @default(auto()) @map("_id") @db.ObjectId
  lineUserId     String   @unique
  name           String
  nickname       String
  department     String
  employeeNumber String?
  role           String
  profilePictureUrl String? 
  createdAt      DateTime @default(now())
  leaveRequests  LeaveRequest[]
  overtimeRequests OvertimeRequest[]
  checkIns       CheckIn[]
}

model LeaveRequest {
  id            String     @id @default(auto()) @map("_id") @db.ObjectId
  userId        String
  user          User       @relation(fields: [userId], references: [id])
  leaveType     String
  leaveFormat   String
  reason       String
  startDate    DateTime
  endDate      DateTime
  status       String
  fullDayCount Float
  approverId    String?
  denialReason  String?
  createdAt     DateTime   @default(now())
  updatedAt     DateTime   @updatedAt
}

model OvertimeRequest {
  id        String   @id @default(auto()) @map("_id") @db.ObjectId
  userId    String   @db.ObjectId
  date      DateTime @db.Date
  hours     Int
  reason    String
  status    String
  createdAt DateTime @default(now())

  user      User     @relation(fields: [userId], references: [id])
}

model CheckIn {
  id        String   @id @default(auto()) @map("_id") @db.ObjectId
  userId    String   @db.ObjectId
  date      DateTime
  status    String
  createdAt DateTime @default(now())

  user      User     @relation(fields: [userId], references: [id])
}

model Holiday {
  id          String   @id @default(auto()) @map("_id") @db.ObjectId
  date        DateTime
  description String
  createdAt   DateTime @default(now())
}